// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-icon Custom svg 1`] = `
<div>
  <!---->
   
  <p>
    Prop use-svg-sprite needs to be false if you want to see custom-svg
  </p>
</div>
`;

exports[`Storyshots modul-components|m-icon UseSvgSprite (false) 1`] = `<!---->`;

exports[`Storyshots modul-components|m-icon name (long) 1`] = `
<div
  style="display: flex; align-items: center;"
>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 8px;"
  >
    Prop name: 
    <strong
      style="color: blue;"
    >
      m-svg__profile
    </strong>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon name (short) 1`] = `
<div
  style="display: flex; align-items: center;"
>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 8px;"
  >
    Prop name: 
    <strong
      style="color: blue;"
    >
      profile
    </strong>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon sandbox 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30px"
  width="30px"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;

exports[`Storyshots modul-components|m-icon showNameAsClass 1`] = `
<div
  style="display: flex; align-items: center;"
>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 8px;"
  >
    Prop name: 
    <strong
      style="color: blue;"
    >
      profile
    </strong>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon size 1`] = `
<div
  style="display: flex; align-items: center;"
>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="30px"
    width="30px"
  >
    <!---->
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 8px;"
  >
    Prop size: 
    <strong
      style="color: blue;"
    >
      30px
    </strong>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon svgTitle 1`] = `
<div
  style="display: flex; align-items: center;"
>
  <svg
    class="m-icon"
    height="20px"
    width="20px"
  >
    <title>
      Title1
    </title>
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 8px;"
  >
    Prop svgTitle: 
    <strong
      style="color: blue;"
    >
      Title1
    </strong>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon/badge offsetX 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30px"
  style="overflow: visible;"
  width="30px"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;

exports[`Storyshots modul-components|m-icon/badge offsetY 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30px"
  style="overflow: visible;"
  width="30px"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;

exports[`Storyshots modul-components|m-icon/badge state 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30px"
  style="overflow: visible;"
  width="30px"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;

exports[`Storyshots modul-components|m-icon/badge state, offsetY, offsetX 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30"
  style="overflow: visible;"
  width="30"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;
